libmenu: always call menu_layout_load() with non_prefixed_name parameter

We must ensure that when loading "${XDG_MENU_PREFIX}applications.menu"
or "applications.menu", the root layout node's name is set to "applications",
not "${XDG_MENU_PREFIX}applications", because the menu spec states that the
default merge directory for "${XDG_MENU_PREFIX}applications.menu" is
"applications-merged", not "${XDG_MENU_PREFIX}applications-merged".

https://bugzilla.gnome.org/show_bug.cgi?id=688972